# adjutant

./: .gitignore  Makefile  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: cd.yaml  ci.yaml  lint.yaml  publish-package.yaml
adjutant/: __init__.py  adjutant_client.py  example.py  sdk.py
docs/: conf.py  index.rst
examples/: README.md  __init__.py
examples/mnist/: .gitignore  README.md  __init__.py  mnist_adjutant.py  mnist_model.py  run_experiment.sh
src/: __init__.py  adjutant.py  example.py
tests/: apis.py  test_adjutant_client.py  write_arg.sh
