[metadata]
name = adjutant-discord
version = 0.0.9
author = Leo Kosta
author_email = kostaleonard@gmail.com
description = A package for managing ML experiments over Discord in conjunction with WandB.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kostaleonard/adjutant
project_urls =
    Bug Tracker = https://github.com/kostaleonard/adjutant/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    discord.py
    wandb
    numpy

[options.packages.find]
include = adjutant